--- a/package.json
+++ b/package.json
@@ -10,19 +10,23 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~14.0.2",
+    "@angular/animations": "~14.0.3",
     "@angular/cdk": "^14.0.2",
-    "@angular/common": "~14.0.2",
-    "@angular/compiler": "~14.0.2",
-    "@angular/core": "~14.0.2",
-    "@angular/forms": "~14.0.2",
+    "@angular/common": "~14.0.3",
+    "@angular/compiler": "~14.0.3",
+    "@angular/core": "~14.0.3",
+    "@angular/forms": "~14.0.3",
     "@angular/material": "^14.0.2",
-    "@angular/platform-browser": "~14.0.2",
-    "@angular/platform-browser-dynamic": "~14.0.2",
-    "@angular/router": "~14.0.2",
+    "@angular/platform-browser": "~14.0.3",
+    "@angular/platform-browser-dynamic": "~14.0.3",
+    "@angular/router": "~14.0.3",
     "chart.js": "^3.8.0",
     "chartjs-plugin-datalabels": "^2.0.0",
+    "exceljs": "^4.3.0",
+    "file-saver": "^2.0.5",
+    "moment": "^2.29.3",
     "ng2-charts": "^3.0.11",
+    "ngx-mat-select-search": "^4.2.0",
     "rxjs": "~6.6.0",
     "subsink": "^1.0.2",
     "tslib": "^2.3.0",
@@ -31,9 +35,10 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "~14.0.2",
     "@angular/cli": "~14.0.2",
-    "@angular/compiler-cli": "~14.0.2",
+    "@angular/compiler-cli": "~14.0.3",
+    "@types/file-saver": "^2.0.5",
     "@types/jasmine": "~3.8.0",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.20.55",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
@@ -41,5 +46,10 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "typescript": "~4.6.4"
+  },
+  "browser": {
+    "fs": false,
+    "os": false,
+    "path": false
   }
 }
