--- a/package.json
+++ b/package.json
@@ -10,16 +10,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~14.0.3",
-    "@angular/cdk": "^14.0.2",
-    "@angular/common": "~14.0.3",
-    "@angular/compiler": "~14.0.3",
-    "@angular/core": "~14.0.3",
-    "@angular/forms": "~14.0.3",
-    "@angular/material": "^14.0.2",
-    "@angular/platform-browser": "~14.0.3",
-    "@angular/platform-browser-dynamic": "~14.0.3",
-    "@angular/router": "~14.0.3",
+    "@angular/animations": "~14.0.5",
+    "@angular/cdk": "^14.0.4",
+    "@angular/common": "~14.0.5",
+    "@angular/compiler": "~14.0.5",
+    "@angular/core": "~14.0.5",
+    "@angular/forms": "~14.0.5",
+    "@angular/material": "^14.0.4",
+    "@angular/platform-browser": "~14.0.5",
+    "@angular/platform-browser-dynamic": "~14.0.5",
+    "@angular/router": "~14.0.5",
     "chart.js": "^3.8.0",
     "chartjs-plugin-datalabels": "^2.0.0",
     "exceljs": "^4.3.0",
@@ -33,9 +33,9 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~14.0.5",
+    "@angular-devkit/build-angular": "^14.0.5",
     "@angular/cli": "~14.0.5",
-    "@angular/compiler-cli": "~14.0.3",
+    "@angular/compiler-cli": "~14.0.5",
     "@types/file-saver": "^2.0.5",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.20.55",
